--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     background-position: center;
 }
 .logo{
-    color: black;
+    color: white;
     font-size: 35px;
     letter-spacing: 1px;
     cursor: pointer;
@@ -51,7 +51,7 @@ h4{
 .About Me{
     width: 100%;
     padding: 100px 0px;
-    background-color: gray; 
+    background-color: grey; 
 }
 .About Me img{
     height: auto;
@@ -91,7 +91,7 @@ h4{
 .contact{
     width: 100%;
     height: 290px;
-    background: gray;
+    background: grey;
     display: flex;
     align-items: center;
     flex-direction: column;
